# KartCoaching

./: .gitignore  README.md  createDataset.py  export_model.py  main.py  requirements.txt
data/: createDataset.py
inference/: CMakeLists.txt  inference.cpp  inference.h  main.cpp  readme.md
model/: coachModel.py
training/: training.py
